[project]
name = "coastaware-mini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.39.4",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "requests>=2.32.4",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]
